--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 2_copy_data.sql
-P9-ConsumerComplaints.csv
-P9-Section3-PostgreSQL-Upload-Code.docx
-P9-Section3-PostgreSQL-Upload-Code.odt
 README.md
+data/
+tasks_and_uploads/
